// Code generated by kds. DO NOT EDIT.

syntax = "proto3";

package examplekds;

option go_package="github.com/iakud/keeper/kds/kdsc/example/examplepb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message Player {
	int64 Id = 1;
	BasicInfo Info = 2;
}

message BasicInfo {
	int64 Id = 1;
	string Name = 2;
	bool IsNew = 3;
}

message Test {
	int64 Id = 1;
	string Name = 2;
	bool IsNew = 3;
}