// Code generated by kds. DO NOT EDIT.

syntax = "proto3";

package examplekds;

option go_package="github.com/iakud/keeper/kds/kdsc/example/examplepb";

import "google/protobuf/field_mask.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";
import "player.proto";

enum PlayerType {
	KING = 0;
	NORMAL = 1;
}

message Key4 {
	
}

message PlayerTest {
	int64 Id = 1;
	BasicInfo Info = 2;
	google.protobuf.Any Any = 3;
	google.protobuf.Int32Value Level = 4;
	repeated BasicInfo Infos = 5;
	google.protobuf.FieldMask field_mask = 10;
	oneof Field1 {
		int64 Key1 = 11;
		string Key2 = 12;
		bool Key3 = 13;
		Key4 Key4 = 14;
	}
	map<int32, string> Buffs = 20;
}