// Code generated by kds. DO NOT EDIT.

syntax = "proto3";

package kdspb;

option go_package="github.com/iakud/kds/kdspb";

message FieldMask {
	int32 Number = 1;
	oneof Field {
		int32 Int32Key = 2;
		string StringKey = 3;
		int32 DelInt32Key = 4;
		string DelStringKey = 5;
	}
	repeated FieldMask FieldMasks = 10;
}